# mareforma

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish.yml  tests.yml
docs/: AGENTS.md  api.md  conf.py  docs.json  index.md  style.css
docs/concepts/: classification.mdx  findings.mdx  origin.mdx  the-graph.mdx  trust.mdx
docs/examples/: api-walkthrough.mdx  compounding-agents.mdx  documented-contestation.mdx  drug-target-provenance.mdx  private-data-public-findings.mdx
docs/examples/01_api_walkthrough/: README.md
docs/examples/02_compounding_agents/: README.md
docs/examples/03_documented_contestation/: README.md
docs/examples/04_private_data_public_findings/: README.md
docs/examples/05_drug_target_provenance/: README.md
docs/for-agents/: agents.mdx
docs/introduction/: quickstart.mdx  why-mareforma.mdx
docs/reference/: api.mdx  changelog.mdx  cli.mdx  data-model.mdx
docs/tutorials/: 01_quickstart.md  02_mental_model.md  03_why_mareforma.md
examples/: 01_api_walkthrough.py  02_compounding_agents.py  04_private_data_public_findings.py  README.md
examples/01_api_walkthrough/: 01_api_walkthrough.py  README.md
examples/02_compounding_agents/: 02_compounding_agents.py  README.md
examples/03_documented_contestation/: 03_documented_contestation.py  README.md
examples/04_private_data_public_findings/: 04_private_data_public_findings.py  README.md
examples/05_drug_target_provenance/: .gitignore  05_drug_target_provenance.py  README.md  claims.toml  mareforma.project.toml  run_experiment.py
examples/05_drug_target_provenance/data/medeadb/preprocessing/: build_transform.py
examples/ai_agent_drug_target/: .gitignore  README.md  claims.toml  mareforma.project.toml  ontology.jsonld
examples/ai_agent_drug_target/data/medeadb/preprocessing/: build_transform.py
mareforma/: __init__.py  __main__.py  _canonical.py  _evidence.py  _graph.py  _literature_health.py  _statement.py  _supports.py  _toml_writer.py  ask_command.py  cli.py  db.py  distance.py  doi_resolver.py  export_bundle.py  git.py  health.py  ingest_command.py  initializer.py  inspector.py  predicate_types.py  prompt_safety.py  registry.py  scaffold.py  signing.py  support.py  transforms.py  validators.py  verifiers.py
mareforma/adapters/: __init__.py
mareforma/adapters/clawinstitute/: __init__.py  client.py  event_hook.py
mareforma/adapters/gemini/: __init__.py
mareforma/adapters/tooluniverse/: __init__.py  adapter.py  demo_tool.py  exec_routing.py  predicate.py  replay.py  roles.py  selectors.py  telemetry.py
mareforma/agent/: __init__.py  _observer.py  _schema.py
mareforma/agent/adapters/: __init__.py  langchain.py
mareforma/canonicalize/: __init__.py  specialty.py
mareforma/db/: __init__.py  _schema_sql.py  core.py  errors.py  restore.py
mareforma/derivation/: __init__.py  deriver.py  log_templates.py  source_profile.py
mareforma/events/: __init__.py  protocol.py
mareforma/exporters/: __init__.py  in_toto.py  jsonld.py  narrative.py  prov_o.py  ro_crate.py
mareforma/hooks/: __init__.py  __main__.py  agent_hook.py  db_activities.py
mareforma/pipeline/: __init__.py  context.py  dag.py  discovery.py  lock.py  runner.py
mareforma/signing/: __init__.py  core.py  rekor.py
mareforma/tools/: __init__.py  protocol.py
mareforma/trust/: __init__.py  _store.py  bearing.py  errors.py  estimate.py  gates.py  prediction.py  proposition.py  status.py
tests/: _helpers.py  conftest.py  test_agent_langchain_adapter.py  test_agent_observer.py  test_artifact_hash.py  test_ask_command.py  test_build_cli.py  test_canonical.py  test_canonicalize.py  test_cli.py  test_cross_diff.py  test_cycle_detection.py  test_dag.py  test_db.py  test_db_migration.py  test_db_reexports.py  test_derivation.py  test_discovery.py  test_distance.py  test_distinct_signer_model.py  test_doi_resolver.py  test_established_upstream.py  test_events_protocol.py  test_evidence.py  test_export_bundle.py  test_grade_and_drift.py  test_graph.py  test_health.py  test_health_ops.py  test_hooks.py  test_ingest_command.py  test_inspector.py  test_jsonld.py  test_narrative_exporter.py  test_params.py  test_perf_and_conformance.py  test_phase1_substrate_hooks.py  test_phase5_ops.py  test_pr2b_benchmark.py  test_pre_ship_hardening.py  (+27 more)
tests/adapters/: test_coexistence.py
tests/adapters/clawinstitute/: test_client.py  test_event_hook.py
tests/adapters/gemini/: test_output_ingester.py
tests/adapters/tooluniverse/: test_adapter.py
tests/epistemic/: _builders.py  test_gates.py  test_multiline.py  test_plan_finding.py  test_support_levels.py  test_trust.py  test_trust_ladder.py
tests/ingest_fixtures/: abstract_a.txt  abstract_b.txt
tests/integration/: test_cross_adapter_federation.py
tutorials/: 01_quickstart.md  02_mental_model.md  03_why_mareforma.md
