[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mareforma"
version = "0.2.0"
description = "Automatic provenance for AI-driven research pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["provenance", "reproducibility", "ai-agents", "research", "data-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.1",
    "tomli-w>=1.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/mareforma/mareforma"
Repository = "https://github.com/mareforma/mareforma"
Issues = "https://github.com/mareforma/mareforma/issues"

[project.optional-dependencies]
git = [
    "gitpython>=3.1",
]
paper = [
    "httpx>=0.27",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "pytest-httpx>=0.30",
    "gitpython>=3.1",
    "httpx>=0.27",
]

[project.scripts]
mareforma = "mareforma.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mareforma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mareforma"]
omit = ["tests/*"]