[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mareforma"
version = "0.3.0"
description = "Epistemic infrastructure for AI scientists"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["epistemic-graph", "ai-scientists", "provenance", "reproducibility", "multi-agent", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.3.3",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.27",
    "cryptography>=42",
    "rfc8785>=0.1",
]

[project.urls]
Homepage = "https://github.com/mareforma/mareforma"
Documentation = "https://docs.mareforma.com"
Repository = "https://github.com/mareforma/mareforma"
Issues = "https://github.com/mareforma/mareforma/issues"

[project.optional-dependencies]
git = [
    "gitpython>=3.1",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "pytest-httpx>=0.36.2",
    "gitpython>=3.1",
]
docs = []

[project.scripts]
mareforma = "mareforma.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mareforma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mareforma"]
omit = ["tests/*"]