[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mareforma"
version = "0.3.4"
description = "Epistemic infrastructure for AI scientists"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["epistemic-graph", "ai-scientists", "provenance", "reproducibility", "multi-agent", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.3.3",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.27",
    "cryptography>=48.0.0",
    "rfc8785>=0.1",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/mareforma/mareforma"
Documentation = "https://docs.mareforma.com"
Repository = "https://github.com/mareforma/mareforma"
Issues = "https://github.com/mareforma/mareforma/issues"

[project.optional-dependencies]
git = [
    "gitpython>=3.1",
]
# Adapter extras. Each names the platform-specific runtime deps the
# adapter needs. mareforma core stays slim; users opt into the
# platforms they actually integrate with.
clawinstitute = []  # httpx is already a core dep
tooluniverse = []   # rich + rfc8785 already core deps
gemini = []          # read-only ingest, no platform SDK
# Substrate-derived classification. tree_sitter + tree_sitter_python
# are heavy native deps; gating them behind an extra keeps the default
# install fast and avoids a wheel-availability constraint on the matrix.
derivation = [
    "tree_sitter>=0.20",
    "tree_sitter_python>=0.20",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "pytest-httpx>=0.36.2",
    "gitpython>=3.1",
    "tree_sitter>=0.20",
    "tree_sitter_python>=0.20",
]
docs = []

[project.scripts]
mareforma = "mareforma.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mareforma*"]

[tool.setuptools.package-data]
# PEP 561: ship the py.typed marker inside the wheel so downstream
# type-checkers (mypy / pyright) honour mareforma's annotations
# instead of treating every symbol as Any.
mareforma = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: long-running test (perf pins at 50k claims, network-backed adapters)",
    "adapters: tests exercising the mareforma.adapters.* namespace",
]

[tool.coverage.run]
source = ["mareforma"]
omit = ["tests/*"]